--- a/public/js/asmhubGUIDE.html
+++ b/public/js/asmhubGUIDE.html
@@ -1,1 +1,1 @@
-https://enblesp1msgzhmk140wukq-on.drv.tw/ASMHUB/asmhubGuide.html
+refer to https://enblesp1msgzhmk140wukq-on.drv.tw/ASMHUB/asmhubGuide.html
