https://enblesp1msgzhmk140wukq-on.drv.tw/ASMHUB/BrowserSettings.html

--- a/public/js/BrowserSettings.html
+++ b/public/js/BrowserSettings.html
@@ -1,1 +1,1 @@
-https://enblesp1msgzhmk140wukq-on.drv.tw/ASMHUB/BrowserSettings.html
+Refer to https://enblesp1msgzhmk140wukq-on.drv.tw/ASMHUB/BrowserSettings.html
